=================
CHANGES for MDPOW
=================

Add summary of changes for each release. Use ISO dates. Reference
GitHub issues numbers and PR numbers.

2017-xx-xx    0.6.1
orbeckst, iorga, ianmkenney, rhheilma

* works with Gromacs 2016.x, 5.1.x, and 4.6.x (#36)
* removed unused analysis.py and analysis/thermodynamics.py
* supported water models: TIP4P, TIP3P, TIP5P, SPC, SPC/E, and
  new: M24 (modified TIP3P, #46)
* fixed sc-power can only take integer powers (#71)
* use PyBOL for building the testing environment
* removed run.MDrunnerSimple (#60)
* used flexible water model (-DFLEXIBLE) for more robust energy
  minimization
* FEP failed with IndexError when lambdas where presented as a list
  (#78)
* EDR files are now output by default instead of XVG (#75)
* deprecated mdpow-ghyd script (issue #14)


2016-06-29    0.6.0
orbeckst, ianmkenney

Code and development are now public on GitHub https://github.com/Becksteinlab/MDPOW

* supported solvents: water, octanol, cyclohexane (new) (#11, #16)
* supported water models: TIP4P, and new: TIP3P, TIP5P, SPC, SPC/E (#38)
* FEP simulations are now done in NPT (Parrinello-Rahman barostat)
  instead of NVT (#28)
* can run with Gromacs BAR and/or TI
* input file format was changed from ini to YAML (#1, #5, #6)
* additional configuration options in the runinput.yml file (#30, #38)



2011-09-06    0.5.1
orbeckst

Bug fixes and the mdpow-rebuild-simulation script to fix-up the state
files. For details see the git log commit messages.


2011-08-25    0.5.0
orbeckst, iorga

Fully working version with all scripts in place. Was used for the SAMPL3
challenge. For details see the git log commit messages.


For earlier releases see the commit messages.